--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -8,6 +8,9 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBox x:Name="textBox" Margin="20,20,20,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" d:LayoutOverrides="LeftPosition, RightPosition"/>
+        <Button x:Name="button" Content="Button" Margin="20,75,20,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" d:LayoutOverrides="LeftPosition, RightPosition" Click="button_Click"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="20,140,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
